2003-06-12  Christian Stimming <stimming@tuhh.de>

	* src/bin/benchmark.cc: Add forgotten include.

2003-06-11  Christian Stimming <stimming@tuhh.de>

	* configure.in: released version 0.3

	* README: Updated.

	* src/bankdata/bankdata.txt: Updated, now valid from 2003-06-09
	onwards.

2003-06-09  Christian Stimming  <stimming@tuhh.de>

	* src/bin/benchmark.cc: Added program to evaluate the different
	lookup methods.

	* acinclude.m4, configure.in: Added macros for checking for
	<ext/hash_map>

	* src/include/ktoblzcheck.h, src/lib/ktoblzcheck.cc: Implemented
	hash_map support if it is available.

	* ktoblzcheck.spec.in, Makefile.am: Add spec file and automated
	rules for rpm building.

2003-06-08  Christian Stimming  <stimming@tuhh.de>

	* src/lib/accnum.cc (AccountNumberCheck_new): Fix stoopid bug that
	prevented proper initialization.

	* configure.in: Released version 0.2
	
	* src/lib/algorithms.{h,cpp}: Moved algorithm functions into
	seperate file to make maintaining easier.

	* src/include/ktoblzcheck.h: Moved code to here.

	* src/include/ktoblzcheck.hh: Added deprecated warning since .hh
	suffix is totally unusual for system-wide installed headers.

2003-05-22  Christian Stimming <stimming@tuhh.de>

	* configure.in: Fixed detection of bankdata installation path.

	* src/bankdata/Makefile.am: Add bankdata.txt to EXTRA_DIST.

2003-05-04  Christian Stimming  <stimming@tuhh.de>

	* src/bankdata/bankdata.txt: Update BLZ list from bundesbank.de to
	the state of 03.03.2003.
	
	* src/lib/ktoblzcheck.cc (check): Fix stupid bug (caused by
	myself) when looking for the method to use.

	* */Makefile.am: Edited all Makefile.am's to use autotools
	standard targets and paths. Now --prefix will adjust all
	installation places accordingly.

	* src/bin/ktoblzcheck.cc: Use the bankdata_path as default data
	file.
	
	* configure.in, src/lib/ktoblzcheck.cc: Removed the
	COMPILE_RESOURCE flag because the compiler would need too much